packages/compile_tests/compile_tests/duplicated_attr.stderr
error: duplicate #[thisctx(skip)] option
 --> compile_tests/duplicated_attr.rs:6:15
  |
6 |     #[thisctx(skip)]
  |               ^^^^
